# IML-Lab

./: README.md
W1/: .gitignore  Makefile  README.md  pyproject.toml
W1/datasets/processed/: encoded_subset_connect4.pkl  pen-based_gs.pkl  process_heart-c.pkl  processed-heart-c.pkl
W1/models_results/connect4/: connect4_k-modes  k-modes  optics  optics_metrics
W1/tests/: test_w1.py
W1/validation/: connect-4_k-means_val.txt  connect4_val.txt  heart-c-fuzzy_val.txt  heart-c_k-means_val.txt  heart-c_kmeans_val.txt  heart-c_optics_val.txt  pen-based_k-means_val.txt  pen-based_kmeans_val.txt  penbased-fuzzy_val.txt  penbased_optics_val.txt
W1/w1/: info.txt  main.py  myfunctions.py  predicted_classes_k_modes.npy  process_connect-4.py  process_heart-c.py  process_hypothyroid.py  process_pen-based.py  utils.py
W1/w1/algorithms/: PCA.py  fuzzycmeans.py  kmeans.py  kmodes.py
W1/w1/models/: connect-4_k-means.py  (+28 more)
W2/: README.md  pyproject.toml
W2/validation/: connect-4_k-means_val.txt  heart-c_k-means_val.txt  pen-based_k-means_val.txt  reduced-heart-c_k-means_val.txt
W3/: README.md  pyproject.toml  requirements.txt
W3/results/: autos-results.txt  autos_results.txt  grid-kibl-analysis.txt  grid-results.txt  grid-select-kibl-results.txt  grid-selection-kibl-analysis.txt  labor-results.txt  pen-based-results.txt  pen-based_results.txt  satimage-results.txt  sick-results.txt  vowel-kibl-analysis.txt  vowel-results.txt  vowel-select-kibl-results.txt  vowel-selection-kibl-analysis.txt
W3/w3/: main.py  reader.py  run_ibl.py  run_kibl.py  run_select_kibl.py  statistical_analysis.py  utils.py
(+68 files in other folders)
