[tool.poetry]
name = "w2"
version = "0.1.0"
description = ""
authors = ["Santiago del Rey Juárez <santiago.del.rey@estudiantat.upc.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
pandas = "^1.3.4"
sklearn = "^0.0"
scipy = "^1.7.1"
seaborn = "^0.11.2"
umap-learn = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
